squirrels tail and hangman pages
squirrels tail and hangman pages with project images, changed home page project logo images, added home nav,  coming soon page for resume

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3784,4 +3784,29 @@ input, select, textarea {
 
 		}
 
-
+		
+/* to center the hangman win and lose images */
+	<style>
+		.box.alt {
+			display: flex;
+			justify-content: center;
+			align-items: center;
+			flex-direction: column;
+		}
+		.row.gtr-uniform {
+			display: flex;
+			justify-content: center;
+		}
+		.col-4 {
+			margin: 10px;
+		}
+	</style>
+	
+	<div class="box alt">
+		<div class="row gtr-uniform">
+			<div class="col-4"><span class="image fit"><img src="Hangman Game Win.png" alt="" height="200"/></span></div>
+			<div class="col-4"><span class="image fit"><img src="Hangman Game Lose.png" alt="" height="200"/></span></div>
+		</div>
+	</div>
+	
+	
